--- a/app/src/main/res/layout/activity_vs.xml
+++ b/app/src/main/res/layout/activity_vs.xml
@@ -4,4 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vs"/>
+    tools:context=".Vs"
+    >
+
+    <fragment
+        android:id="@+id/streetViewMap"
+        android:name="com.google.android.gms.maps.StreetViewPanoramaFragment"
+        android:layout_width="296dp"
+        android:layout_height="395dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginBottom="135dp" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button4"
+        android:layout_width="178dp"
+        android:layout_height="96dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="116dp"
+        android:layout_marginRight="116dp"
+        android:layout_marginBottom="31dp"
+        android:background="@drawable/roundstyle"
+        android:text="Go back"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+
+</RelativeLayout>
