18/01 - game first time working

--- a/app/src/main/res/layout/activity_joinroom.xml
+++ b/app/src/main/res/layout/activity_joinroom.xml
@@ -4,52 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".confirmlogout"
+    tools:context=".Joinroom"
     android:background="@drawable/unnamed"
     >
 
-    <TextView
-        android:id="@+id/player2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="78dp"
-        android:layout_marginRight="78dp"
-        android:layout_marginBottom="359dp"
-        android:text="Are you sure?"
-        android:textColor="@color/black"
-        android:textSize="39sp"
-        android:textStyle="bold" />
-
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/cancel_logout"
+        android:id="@+id/button5"
         android:layout_width="178dp"
         android:layout_height="96dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="204dp"
-        android:layout_marginRight="204dp"
-        android:layout_marginBottom="242dp"
+        android:layout_marginEnd="116dp"
+        android:layout_marginRight="116dp"
+        android:layout_marginBottom="71dp"
         android:background="@drawable/roundstyle"
-        android:text="Cancel"
+        android:text="Go back"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
+    <EditText
+        android:id="@+id/jointhis"
+        android:layout_width="247dp"
+        android:layout_height="85dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="84dp"
+        android:layout_marginRight="84dp"
+        android:layout_marginBottom="331dp"
+        android:ems="10"
+        android:hint="Room code"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="30sp" />
+
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/logout_btn_final"
+        android:id="@+id/join_room10"
         android:layout_width="178dp"
         android:layout_height="96dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginBottom="241dp"
+        android:layout_marginEnd="116dp"
+        android:layout_marginRight="116dp"
+        android:layout_marginBottom="220dp"
         android:background="@drawable/roundstyle"
-        android:text="Logout"
+        android:text="Join"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
