--- a/app/src/main/res/layout/activity_createorjoin.xml
+++ b/app/src/main/res/layout/activity_createorjoin.xml
@@ -4,53 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".confirmlogout"
+    tools:context=".Createorjoin"
     android:background="@drawable/unnamed"
     >
 
+
     <TextView
-        android:id="@+id/player2"
+        android:id="@+id/textchose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="78dp"
-        android:layout_marginRight="78dp"
-        android:layout_marginBottom="359dp"
-        android:text="Are you sure?"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
+        android:layout_marginBottom="382dp"
+        android:text="Make your choice!"
         android:textColor="@color/black"
         android:textSize="39sp"
         android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/cancel_logout"
+        android:id="@+id/join_room"
         android:layout_width="178dp"
         android:layout_height="96dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="204dp"
-        android:layout_marginRight="204dp"
-        android:layout_marginBottom="242dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginBottom="260dp"
         android:background="@drawable/roundstyle"
-        android:text="Cancel"
+        android:text="Join room"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/logout_btn_final"
+        android:id="@+id/create_room"
         android:layout_width="178dp"
         android:layout_height="96dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginBottom="241dp"
+        android:layout_marginEnd="209dp"
+        android:layout_marginRight="209dp"
+        android:layout_marginBottom="260dp"
         android:background="@drawable/roundstyle"
-        android:text="Logout"
+        android:text="Create room"
         android:textColor="@color/white"
         android:textSize="20dp" />
-
 </RelativeLayout>
