--- a/app/src/main/res/layout/activity_waiting.xml
+++ b/app/src/main/res/layout/activity_waiting.xml
@@ -9,23 +9,64 @@
     >
 
 
+    <ImageView
+        android:id="@+id/ve"
+        android:layout_width="112dp"
+        android:layout_height="104dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="151dp"
+        android:layout_marginRight="151dp"
+        android:layout_marginBottom="230dp"
+        android:src="@drawable/down" />
+
     <ProgressBar
         android:id="@+id/progressbar"
-        android:indeterminateDuration="@android:integer/config_longAnimTime"
         style="?android:attr/progressBarStyle"
         android:layout_width="118dp"
         android:layout_height="109dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="147dp"
-        android:layout_marginRight="147dp"
-        android:layout_marginBottom="227dp"
-        android:progress="70"
+        android:layout_marginEnd="144dp"
+        android:layout_marginRight="144dp"
+        android:layout_marginBottom="225dp"
         android:indeterminateDrawable="@drawable/rotate"
-        >
+        android:indeterminateDuration="@android:integer/config_longAnimTime"
+        android:progress="70">
 
     </ProgressBar>
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="316dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="350dp"
+        android:text="Waiting for player..."
+        android:textColor="@color/black"
+        android:textSize="35sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/room_code"
+        android:layout_width="365dp"
+        android:layout_height="43dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="19dp"
+        android:layout_marginRight="19dp"
+        android:layout_marginBottom="414dp"
+        android:text="Your code:A2CV4C"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button90"
@@ -34,26 +75,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="117dp"
-        android:layout_marginRight="117dp"
-        android:layout_marginBottom="73dp"
+        android:layout_marginEnd="115dp"
+        android:layout_marginRight="115dp"
+        android:layout_marginBottom="74dp"
         android:background="@drawable/roundstyle"
         android:text="Go back"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="377dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="9dp"
-        android:layout_marginRight="9dp"
-        android:layout_marginBottom="362dp"
-        android:text="Waiting for player..."
-        android:textColor="@color/black"
-        android:textSize="40sp"
-        android:textStyle="bold" />
 </RelativeLayout>
