--- a/app/src/main/res/layout/activity_waiting.xml
+++ b/app/src/main/res/layout/activity_waiting.xml
@@ -16,9 +16,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="151dp"
-        android:layout_marginRight="151dp"
-        android:layout_marginBottom="230dp"
+        android:layout_marginEnd="139dp"
+        android:layout_marginRight="139dp"
+        android:layout_marginBottom="224dp"
         android:src="@drawable/down" />
 
     <ProgressBar
@@ -29,9 +29,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="144dp"
-        android:layout_marginRight="144dp"
-        android:layout_marginBottom="225dp"
+        android:layout_marginEnd="141dp"
+        android:layout_marginRight="141dp"
+        android:layout_marginBottom="223dp"
         android:indeterminateDrawable="@drawable/rotate"
         android:indeterminateDuration="@android:integer/config_longAnimTime"
         android:progress="70">
@@ -56,13 +56,13 @@
     <TextView
         android:id="@+id/room_code"
         android:layout_width="365dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="19dp"
         android:layout_marginRight="19dp"
-        android:layout_marginBottom="414dp"
+        android:layout_marginBottom="405dp"
         android:text="Your code:A2CV4C"
         android:textColor="@color/black"
         android:textSize="40sp"
@@ -75,9 +75,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="115dp"
-        android:layout_marginRight="115dp"
-        android:layout_marginBottom="74dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginRight="107dp"
+        android:layout_marginBottom="76dp"
         android:background="@drawable/roundstyle"
         android:text="Go back"
         android:textColor="@color/white"
