--- a/app/src/main/res/layout/activity_place1.xml
+++ b/app/src/main/res/layout/activity_place1.xml
@@ -15,28 +15,13 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
-        android:layout_marginBottom="334dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginRight="62dp"
+        android:layout_marginBottom="364dp"
         android:text="Where were you?"
         android:textColor="@color/black"
         android:textSize="35sp"
         android:textStyle="bold" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/place1_answer2"
-        android:layout_width="178dp"
-        android:layout_height="96dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:layout_marginBottom="219dp"
-        android:background="@drawable/roundstyle"
-        android:text="London"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/place1_answer3"
@@ -47,9 +32,24 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="212dp"
         android:layout_marginRight="212dp"
-        android:layout_marginBottom="110dp"
+        android:layout_marginBottom="141dp"
         android:background="@drawable/roundstyle"
         android:text="Africa"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/place1_answer2"
+        android:layout_width="178dp"
+        android:layout_height="96dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="250dp"
+        android:background="@drawable/roundstyle"
+        android:text="London"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
@@ -60,9 +60,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:layout_marginBottom="110dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="141dp"
         android:background="@drawable/roundstyle"
         android:text="Israel"
         android:textColor="@color/white"
@@ -77,25 +77,25 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="212dp"
         android:layout_marginRight="212dp"
-        android:layout_marginBottom="219dp"
+        android:layout_marginBottom="250dp"
         android:background="@drawable/roundstyle"
         android:text="Spain"
         android:textColor="@color/white"
         android:textSize="20dp" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="271dp"
+        android:id="@+id/textView_showtime"
+        android:layout_width="51dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="128dp"
-        android:layout_marginRight="128dp"
-        android:layout_marginBottom="394dp"
-        android:text="Time left:"
+        android:layout_marginEnd="174dp"
+        android:layout_marginRight="174dp"
+        android:layout_marginBottom="408dp"
+        android:text="00"
         android:textColor="@color/black"
-        android:textSize="35sp"
+        android:textSize="38sp"
         android:textStyle="bold" />
 
 </RelativeLayout>
