--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#cc0000</color>
     <color name="green">#00cc00</color>
+    <color name="yellow">#cccc00</color>
 </resources>
