24/01 - place1 completed, score and coins added

--- a/app/src/main/res/layout/activity_lost.xml
+++ b/app/src/main/res/layout/activity_lost.xml
@@ -30,10 +30,25 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginBottom="317dp"
-        android:text=" Your score: 5 points"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginBottom="316dp"
+        android:text="Your score: +5 points"
+        android:textColor="@color/black"
+        android:textSize="35sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="57dp"
+        android:layout_marginRight="57dp"
+        android:layout_marginBottom="255dp"
+        android:text="Coins: +1 coin"
         android:textColor="@color/black"
         android:textSize="35sp"
         android:textStyle="bold" />
@@ -45,9 +60,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="132dp"
-        android:layout_marginRight="132dp"
-        android:layout_marginBottom="379dp"
+        android:layout_marginEnd="131dp"
+        android:layout_marginRight="131dp"
+        android:layout_marginBottom="385dp"
         android:text="Loser!"
         android:textColor="@color/black"
         android:textSize="50sp"
