--- a/app/src/main/res/layout/activity_vs.xml
+++ b/app/src/main/res/layout/activity_vs.xml
@@ -35,5 +35,20 @@
         android:textSize="35sp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="128dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="139dp"
+        android:layout_marginRight="139dp"
+        android:layout_marginBottom="174dp"
+        android:text="3"
+        android:textColor="@color/black"
+        android:textSize="200sp"
+        android:textStyle="bold" />
+
 
 </RelativeLayout>
