02 /04 - GAME DONE + STORE START

--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -13,52 +13,26 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="86dp"
-        android:layout_marginRight="86dp"
-        android:layout_marginBottom="194dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginRight="84dp"
+        android:layout_marginBottom="161dp"
         android:elevation="5dp"
         android:src="@drawable/line" />
 
-    <ImageView
-        android:id="@+id/vsimg"
-        android:layout_width="189dp"
-        android:layout_height="174dp"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/logout_btn"
+        android:layout_width="178dp"
+        android:layout_height="96dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="240dp"
-        android:elevation="5dp"
-        android:src="@drawable/vspng" />
-
-    <ImageView
-        android:id="@+id/ldimg"
-        android:layout_width="189dp"
-        android:layout_height="174dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="209dp"
-        android:layout_marginRight="209dp"
-        android:layout_marginBottom="238dp"
-        android:elevation="5dp"
-        android:src="@drawable/ldpng" />
-
-    <TextView
-        android:id="@+id/infld2"
-        android:layout_width="93dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="37dp"
-        android:layout_marginBottom="204dp"
-        android:text=" Play"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:layout_marginEnd="109dp"
+        android:layout_marginRight="109dp"
+        android:layout_marginBottom="34dp"
+        android:background="@drawable/roundstyle"
+        android:text="Logout"
+        android:textColor="@color/white"
+        android:textSize="22dp" />
 
     <TextView
         android:id="@+id/infld"
@@ -67,13 +41,54 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="213dp"
-        android:layout_marginRight="213dp"
-        android:layout_marginBottom="202dp"
+        android:layout_marginEnd="212dp"
+        android:layout_marginRight="212dp"
+        android:layout_marginBottom="172dp"
         android:text="Leaderboards"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/infld2"
+        android:layout_width="93dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
+        android:layout_marginBottom="174dp"
+        android:text=" Play"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/ldimg"
+        android:layout_width="189dp"
+        android:layout_height="174dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="210dp"
+        android:layout_marginRight="210dp"
+        android:layout_marginBottom="208dp"
+        android:elevation="5dp"
+        android:src="@drawable/ldpng" />
+
+    <ImageView
+        android:id="@+id/vsimg"
+        android:layout_width="189dp"
+        android:layout_height="174dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="210dp"
+        android:elevation="5dp"
+        android:src="@drawable/vspng" />
 
     <TextView
         android:id="@+id/player2"
@@ -82,9 +97,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="191dp"
-        android:layout_marginRight="191dp"
-        android:layout_marginBottom="423dp"
+        android:layout_marginEnd="193dp"
+        android:layout_marginRight="193dp"
+        android:layout_marginBottom="394dp"
         android:text="Welcome,"
         android:textColor="@color/black"
         android:textSize="28sp"
@@ -99,31 +114,33 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="222dp"
-        android:layout_marginLeft="222dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginRight="26dp"
-        android:layout_marginBottom="423dp"
+        android:layout_marginStart="218dp"
+        android:layout_marginLeft="218dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="394dp"
         android:text=""
         android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/logout_btn"
-        android:layout_width="178dp"
-        android:layout_height="96dp"
+    <ImageView
+        android:id="@+id/image_shop"
+        android:layout_width="110dp"
+        android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="109dp"
-        android:layout_marginRight="109dp"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/roundstyle"
-        android:text="Logout"
-        android:textColor="@color/white"
-        android:textSize="22dp" />
-
+        android:layout_marginStart="293dp"
+        android:layout_marginLeft="293dp"
+        android:layout_marginTop="73dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="436dp"
+        app:srcCompat="@drawable/shop" />
 
 
 </RelativeLayout>
