--- a/app/src/main/res/layout/activity_createorjoin.xml
+++ b/app/src/main/res/layout/activity_createorjoin.xml
@@ -9,6 +9,21 @@
     >
 
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button3"
+        android:layout_width="178dp"
+        android:layout_height="96dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="111dp"
+        android:layout_marginRight="111dp"
+        android:layout_marginBottom="92dp"
+        android:background="@drawable/roundstyle"
+        android:text="Go back"
+        android:textColor="@color/white"
+        android:textSize="22dp" />
+
     <TextView
         android:id="@+id/textchose"
         android:layout_width="wrap_content"
