--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#cc0000</color>
     <color name="green">#00cc00</color>
     <color name="yellow">#cccc00</color>
+    <color name="gold">#d4af37</color>
 </resources>
